src/test/ui/E0594.ast.nll.stderr
error[E0594]: cannot assign to immutable static item `NUM`
  --> $DIR/E0594.rs:7:5
   |
LL |     NUM = 20;
   |     ^^^^^^^^ cannot assign

error: aborting due to previous error

