src/test/ui/E0594.rs
// revisions: ast mir
//[mir]compile-flags: -Z borrowck=mir

static NUM: i32 = 18;

fn main() {
    NUM = 20; //[ast]~ ERROR E0594
              //[mir]~^ ERROR cannot assign to immutable static item `NUM`
}
